--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://teamfaraday.org/"
+baseURL = "https://teamfaraday.github.io/"
 languageCode = "en-us"
 title = "Team Faraday"
 theme = "hugo-hero-theme"
