--- a/config/GithubProjectPage/config.toml
+++ b/config/GithubProjectPage/config.toml
@@ -1,7 +1,8 @@
-baseURL = "https://teamfaraday.github.io/"
+baseURL = "/teamfaraday.github.io"
 languageCode = "en-us"
 title = "Team Faraday"
 theme = "hugo-hero-theme"
+
 
 [params]
   google_analytics_id=""
